Camino only - Bug 359662: Fix validation of Bookmark menu helper items. r=smorgan sr=pink